# sqlPy

./: .pdm-python  README.md  db.py  legos.db  pyproject.toml
db/: database.py  legos.db
db/tests/: context.py  test_basic.py
