[project]
name = "sqlPy"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "hurley08", email = "intriqet@gmail.com"},
]
dependencies = [
    "sql>=2022.4.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true
